<?xml version="1.0" encoding="UTF-8"?>
<!--
  
  Copyright 2014 Quality and Usability Lab, Telekom Innvation Laboratories, TU Berlin..
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
  

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
  <ImageView
    android:src="@drawable/ic_launcher"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:scaleType="center"
    android:background="@color/gray"
    android:contentDescription="@string/app_name" />
  <TextView
    android:text="@string/alert_paper_password_title"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="16dp"/>
  <TextView
    android:text="@string/alert_paper_password_descr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"/>
  <EditText
    android:id="@+id/alert_paper_password_login"
    android:inputType="textEmailAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/alert_paper_password_login" />
  <EditText
    android:id="@+id/alert_paper_password_pw"
    android:inputType="textPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:hint="@string/alert_paper_password_pw" />
  <LinearLayout
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
      android:text="@string/alert_cancel"
      android:id="@+id/alert_paper_password_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
    <Button
      android:text="@string/alert_submit"
      android:id="@+id/alert_paper_password_submit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  </LinearLayout>
</LinearLayout>