<?xml version="1.0" encoding="UTF-8"?>
<!--
QUe

Copyright (c) 2014 Quality and Usability Lab,
Telekom Innvation Laboratories, TU Berlin. All rights reserved.
https://github.com/QULab/QUe-Android

This file is part of QUe.

QUe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

QUe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with QUe. If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
  <ImageView
    android:src="@drawable/ic_launcher"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:scaleType="center"
    android:background="@color/gray"
    android:contentDescription="@string/app_name" />
  <TextView
    android:text="@string/alert_auth_required"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="16dp"/>
  <TextView
    android:text="@string/alert_auth_choose"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"/>
  <Button
    android:text="@string/alert_auth_registered_button"
    android:id="@+id/alert_auth_registered_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"/>
  <Button
    android:text="@string/alert_auth_paper_button"
    android:id="@+id/alert_auth_paper_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
  <Button
    android:text="@string/alert_cancel"
    android:id="@+id/alert_auth_cancel_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</LinearLayout>