<?xml version="1.0" encoding="utf-8"?>
<!--
  
  Copyright 2014 Quality and Usability Lab, Telekom Innvation Laboratories, TU Berlin..
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
android:orientation="vertical"-->
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/white">

    <LinearLayout
      android:id="@+id/welcome_top_ll"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/textView" 
        android:textAlignment="center" 
        android:textStyle="bold"
        android:textSize="25sp" 
        android:gravity="center" 
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        android:textIsSelectable="false"
                />
      <View
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="@drawable/drop_shadow"
      >
      </View>
    </LinearLayout>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/welcome_intro"
      android:id="@+id/welcome_intro"
      android:layout_centerHorizontal="true"
      android:textStyle="bold"
      android:textColor="#ff3b3b3b"
      android:layout_below="@id/welcome_top_ll"/>
    <LinearLayout
      android:id="@+id/welcome_main_ll"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
      android:layout_margin="5dp"
      android:background="#ffffffff"
      android:layout_below="@id/welcome_intro">
      
      <TextView  
        android:id="@+id/welcome_intro_fav" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/welcome_intro_fav"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:drawableLeft="@drawable/ic_favorite_set"
        android:drawablePadding="10dip"
        android:layout_marginBottom="8dp" />
      
      <TextView  
        android:id="@+id/welcome_intro_search" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/welcome_intro_search"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="10dip"
        android:layout_marginBottom="8dp" />
      
      <TextView  
        android:id="@+id/welcome_intro_start" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/welcome_intro_start"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:drawableLeft="@drawable/ic_action_done"
        android:drawablePadding="10dip"
        android:layout_marginBottom="8dp" />
    </LinearLayout>
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/welcome_logo" 
      android:src="@drawable/splash_logo"
      android:contentDescription="@string/splash_descr"
      android:padding="5dp"
      android:layout_alignParentBottom="true"/>
  </RelativeLayout>
<!--</ScrollView>-->